# anaglyph-rs

./: .gitignore  Cargo.toml  README.md
src/: anaglyph.rs  gif.rs  lib.rs  main.rs  video.rs
