[package]
name = "anaglyph-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
image = "0.25.1"
video-rs = { version = "0.7", features = ["ndarray"], optional = true }
ndarray = { version = "0.15.6", optional = true }
rayon = { version = "1.10.0", optional = true}

[features]
video = ["dep:video-rs", "dep:ndarray", "dep:rayon"]

[profile.release]
#debug=true